--- a/IVoxel_Terrain.uproject
+++ b/IVoxel_Terrain.uproject
@@ -26,6 +26,14 @@
 		{
 			"Name": "UnrealFastNoisePlugin",
 			"Enabled": true
+		},
+		{
+			"Name": "Niagara",
+			"Enabled": true
+		},
+		{
+			"Name": "NiagaraExtras",
+			"Enabled": true
 		}
 	]
 }
